<resources>
    <string name="app_name">Weather</string>
    <string name="Textee">Херсон</string>
    <string name="n_n_19_n_22">ПН\nЯсно\n+19\n+22</string>
    <string name="n_n_19_n_20">ВТ\nЯсно\n+19\n+20</string>
    <string name="n_n_22_n_19">СР\nТуман\n+22\n+19</string>
    <string name="n_n_13_n_15">ЧТ\nГроза\n+13\n+15</string>
    <string name="n_n_17_n_22">ПТ\nЯсно\n+17\n+22</string>
    <string name="n_n_20_n_22">СБ\nГуд\n+20\n+22</string>
    <string name="n_n_20_n_22444">ВС\nГуд\n+20\n+22</string>
    <string name="_19">+19</string>
    <string name="_23">+23</string>
    <string name="n_n_65_n_n_7">Переменная облачность\n\nВлажность: 65%\n\nВетер: 7 км/час</string>
    <string name="off">off</string>
    <string name="on">on</string>
    <string name="title_activity_two">activityTwo</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_world">Hello world</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu">Главное меню</string>
    <string name="city_name">введите город</string>
    <string name="go">go</string>
    <string name="current_by_city">cur_city</string>
    <string name="hours_by_city">hours</string>
    <string name="days_by_city">days</string>
</resources>