<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/back"
    tools:context=".FirstFragment">

    <ToggleButton
        android:id="@+id/toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:drawableStart="@drawable/selector"
        android:textOff="@string/off"
        android:textOn="@string/on"
        tools:ignore="RelativeOverlap" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ImageView"
        android:layout_marginTop="20dp"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        android:layout_marginStart="23dp"
        android:layout_marginTop="-1dp"
        android:background="@color/myColor3"
        android:text="@string/Textee"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="338dp"
        android:background="@color/myColor3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="311dp"
        android:text="@string/n_n_19_n_22"
        android:textAlignment="center" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="58dp"
        android:layout_marginBottom="311dp"
        android:text="@string/n_n_19_n_20"
        android:textAlignment="center" />

    <TextView
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="110dp"
        android:layout_marginBottom="311dp"
        android:text="@string/n_n_22_n_19"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="166dp"
        android:layout_marginBottom="311dp"
        android:text="@string/n_n_13_n_15"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="224dp"
        android:layout_marginBottom="311dp"
        android:text="@string/n_n_17_n_22"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="280dp"
        android:layout_marginBottom="311dp"
        android:text="@string/n_n_20_n_22"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="338dp"
        android:layout_marginBottom="311dp"
        android:text="@string/n_n_20_n_22444"
        android:textAlignment="center" />


    <TextView
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="242dp"
        android:background="#A833D508"
        android:text="@string/_19"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35sp" />

    <TextView
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="264dp"
        android:layout_marginTop="82dp"
        android:layout_marginBottom="598dp"
        android:background="@color/myColor2"
        android:text="@string/_23"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="147dp"
        android:background="@color/myColor"
        android:text="@string/n_n_65_n_n_7"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <Button
        android:id="@+id/buttonPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="156dp"
        android:layout_marginTop="516dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonPanel" />

</RelativeLayout>

