<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"

    tools:context=".MainActivity">

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/off"
        android:textOn="@string/on"
        android:id="@+id/toggle"
        android:drawableStart="@drawable/selector"
        android:layout_marginTop="0dp"
        />

    <TextView
        android:layout_width="165dp"
        android:layout_height="124dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="116dp"
        android:layout_marginTop="323dp"
        android:text="@string/hello_world"
        android:textColor="@color/white"
        android:textSize="@dimen/material_emphasis_medium" />


</RelativeLayout>

